changed lambdas to compile with java 13